# abusive-error-messages

./: README.md  pyproject.toml
src/abusive_error_messages/: __init__.py
