[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abusive-error-messages"
dynamic = ["version"]
description = "Because programming isn't hard enough already"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Copeland Carter", email = "smartycope@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "rich"
]

[project.urls]
Documentation = "https://github.com/unknown/abusive-error-messages#readme"
Issues = "https://github.com/unknown/abusive-error-messages/issues"
Source = "https://github.com/unknown/abusive-error-messages"

[tool.hatch.version]
path = "src/abusive_error_messages/__init__.py"

[tool.hatch.envs.default]
dependencies = []

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = []

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/abusive_error_messages tests}"

[tool.coverage.run]
source_pkgs = ["abusive_error_messages", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
abusive_error_messages = ["src/abusive_error_messages", "*/abusive-error-messages/src/abusive_error_messages"]
tests = ["tests", "*/abusive-error-messages/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
